# spectrumlab-tiny

./: .coveragerc  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
spectrumlab/: __init__.py  detectors.py  grid.py  spectrum.py  utils.py
spectrumlab/approximation/: scope.py
spectrumlab/emulations/: curves.py
spectrumlab/peak/: peak.py  shape.py
spectrumlab/peaks/: shape.py  utils.py
spectrumlab/spectra/: spectrum.py
src/spectrumlab/: __init__.py  noise.py  types.py  utils.py
src/spectrumlab/approximations/: scope.py  variables.py
src/spectrumlab/emulations/: noise.py
src/spectrumlab/grid/: __init__.py  grid.py
src/spectrumlab/peaks/: __init__.py  peak.py  shape.py
src/spectrumlab/peaks/draft_peaks/: __init__.py  config.py  draft_peaks.py
src/spectrumlab/peaks/utils/: __init__.py  draft_peaks.py
src/spectrumlab/shapes/: __init__.py  shape.py
src/spectrumlab/shapes/factories/: retrieve_shape_from_grid.py  retrieve_shape_from_spectrum.py
src/spectrumlab/shapes/factories/utils/: full_params.py  params.py  scope_params.py  shape_params.py
src/spectrumlab/shapes/retrieve_peak_shape/: __init__.py  config.py  retrieve_shape_from_grid.py  retrieve_shape_from_spectrum.py
src/spectrumlab/shapes/retrieve_peak_shape/utils/: __init__.py  full_params.py  scope_params.py  shape_params.py
src/spectrumlab/spectra/: __init__.py  spectrum.py
