[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrumlab-tiny"
version = "0.1.0"
description = "`spectrumlab-tiny` is a tiny version of `spectrumlab` library for estimate peak's shape profile."
readme = "README.md"
keywords = [
    "spectroscopy",
    "atomic emission spectroscopy",
    "peak shape profile",
    "linear detector",
]
authors = [
    {name = "Pavel Vaschenko", email="vaschenko@vmk.ru"},
]
maintainers = [
    {name = "Pavel Vaschenko", email="vaschenko@vmk.ru"},
]
license = {text = "MIT License"}
dependencies = [
    "matplotlib==3.9.3",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "scipy>=1.14.1",
    "tqdm>=4.67.1",
]
requires-python = ">=3.12"

[dependency-groups]
linting = [
    "flake8",
    "flake8-commas",
    "flake8-import-order",
    "flake8-bugbear",
    "flake8-builtins",
    "pep8-naming",
]
testing = [
    "pytest",
    "pytest-cov",
]
notebook = [
    "jupyter>=1.1.1",
]
dev = [
    {include-group = "linting"},
    {include-group = "testing"},
    {include-group = "notebook"},
    "pre-commit>=4.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.md", "*.txt", "*.xml"]
